@@ -98,7 +98,7 @@ static const command_rec CaseFilterCmds[] =
 static void CaseFilterRegisterHooks(apr_pool_t *p)
     {
     ap_hook_insert_filter(CaseFilterInsertFilter,NULL,NULL,APR_HOOK_MIDDLE);
-    ap_register_output_filter(s_szCaseFilterName,CaseFilterOutFilter,
+    ap_register_output_filter(s_szCaseFilterName,CaseFilterOutFilter,NULL,
 			      AP_FTYPE_RESOURCE);
     }
 
