@@ -760,9 +760,9 @@ static apr_status_t deflate_in_filter(ap_filter_t *f,
 
 static void register_hooks(apr_pool_t *p)
 {
-    ap_register_output_filter(deflateFilterName, deflate_out_filter,
+    ap_register_output_filter(deflateFilterName, deflate_out_filter, NULL,
                               AP_FTYPE_CONTENT_SET);
-    ap_register_input_filter(deflateFilterName, deflate_in_filter,
+    ap_register_input_filter(deflateFilterName, deflate_in_filter, NULL,
                               AP_FTYPE_CONTENT_SET);
 }
 
